# wiiscrubber-ng

./: AUTHORS  CMakeLists.txt  CPackLists.txt  Doxyfile  FAQ.txt  README  config.h.cmake
src/: AddPartition.cpp  AddPartition.h  BootMode.cpp  BootMode.h  CMakeLists.txt  ResizePartition.cpp  ResizePartition.h  WIIDisc.cpp  WIIDisc.h  main.cpp  misc.c  misc.h  structs.h  util.c  util.h
